--- a/index.html
+++ b/index.html
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Luna Hub - Key</title>
-  <style>
-    body {
-      background-color: #1c1c1c;
-      color: white;
-      font-family: Arial;
-      text-align: center;
-      padding-top: 100px;
-    }
-    .key {
-      font-size: 24px;
-      background: #2f3136;
-      padding: 10px 20px;
-      border-radius: 10px;
-      display: inline-block;
-      margin-top: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luna Hub - Scripts & Keys</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Sua Key foi gerada com sucesso!</h1>
-  <p class="key">LUNA-HUB-123</p>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="logo">
+            <h1>Luna Hub</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#scripts">Scripts</a></li>
+                <li><a href="#get-key">Get Key</a></li>
+                <li><a href="#discord">Discord</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Seção Principal -->
+    <section id="home" class="hero">
+        <div class="glass-container">
+            <h2>Bem-vindo à Luna Hub</h2>
+            <p>A melhor hub de scripts para Roblox com suporte a diversos jogos!</p>
+            <a href="#scripts" class="cta-button">Explorar Scripts</a>
+        </div>
+    </section>
+
+    <!-- Seção de Scripts -->
+    <section id="scripts" class="section">
+        <div class="glass-container">
+            <h2>Nossos Scripts</h2>
+            <p>Suporte para mais de 9 jogos, incluindo:</p>
+            <ul class="script-list">
+                <li>Project Slayers</li>
+                <li>Da Hood</li>
+                <li>Pet Simulator X</li>
+                <li>Arsenal</li>
+                <li>Michael’s Zombies</li>
+                <li>Outros...</li>
+            </ul>
+            <a href="#" class="download-button">Download do Script</a>
+        </div>
+    </section>
+
+    <!-- Seção Get Key -->
+    <section id="get-key" class="section">
+        <div class="glass-container">
+            <h2>Obtenha Sua Chave</h2>
+            <p>Siga as instruções no nosso Discord para obter a chave de ativação dos scripts.</p>
+            <ol>
+                <li>Junte-se ao nosso <a href="#discord">servidor Discord</a>.</li>
+                <li>Verifique sua conta no canal #verify.</li>
+                <li>Solicite a chave no canal #get-key.</li>
+            </ol>
+            <a href="#discord" class="cta-button">Ir para o Discord</a>
+        </div>
+    </section>
+
+    <!-- Seção Discord -->
+    <section id="discord" class="section">
+        <div class="glass-container">
+            <h2>Junte-se à Comunidade</h2>
+            <p>Participe do nosso servidor Discord para suporte, atualizações e interação com a comunidade!</p>
+            <a href="https://discord.gg/AQkYRVUXsZ" target="_blank" class="discord-button">Entrar no Discord</a>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>© 2025 Luna Hub. Todos os direitos reservados.</p>
+        <p>Desenvolvido por kzinnx</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
