--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna Hub - Scripts & Keys</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -45,6 +45,10 @@
                 <li>Michael’s Zombies</li>
                 <li>Outros...</li>
             </ul>
+            <p><strong>Script Principal:</strong></p>
+            <div class="script-code">
+                <code>loadstring(game:HttpGet("https://raw.githubusercontent.com/Wakasax/WakasaHub/refs/heads/main/Luna.lua", true))()</code>
+            </div>
             <a href="#" class="download-button">Download do Script</a>
         </div>
     </section>
@@ -75,9 +79,7 @@
     <!-- Rodapé -->
     <footer>
         <p>© 2025 Luna Hub. Todos os direitos reservados.</p>
-        <p>Desenvolvido por kzinnx</p>
+        <p>Desenvolvido por Duxkyx#5079 & kura#6311</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
